--- a/possel/data/templates/client.html
+++ b/possel/data/templates/client.html
@@ -15,31 +15,30 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/reconnecting-websocket/1.0.0/reconnecting-websocket.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flux/2.1.1/Flux.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js"></script>
 
     <link rel="stylesheet" href="{{ static_url('main.css') }}">
     <script>
       var ws_url = "ws://" + window.location.host + "{{ reverse_url('push') }}";
     </script>
-    <script src="{{ static_url('main.js') }}"></script>
+    <script src="{{ static_url('test.js') }}"></script>
+    <script src="{{ static_url('ui.js') }}"></script>
   </head>
   <body>
     <div class="container-fluid" id="outer-container">
-      <div class="row">
-        <div class="col-md-1"><ul id="bufferlist" class="nav nav-pills nav-stacked" role="tablist"></ul></div>
-        <div class="col-md-10 tab-content" id="message-pane"></div>
-        <div class="col-md-1"></div>
+      <div id="nodeMount" class="row"></div>
+      <!-- <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-11">
+      <form role="form" id="message-input-form">
+      <div class="input-append input-prepend form-inline">
+      <input type="text" class="form-control" id="message-input">
+      <button type="submit" class="btn btn-default">Send</button>
       </div>
-      <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-md-11">
-          <form role="form" id="message-input-form">
-            <div class="input-append input-prepend form-inline">
-              <input type="text" class="form-control" id="message-input">
-              <button type="submit" class="btn btn-default">Send</button>
-            </div>
-          </form>
-        </div>
+      </form>
       </div>
+      </div> -->
     </div>
   </body>
 </html>
