React Frontend now Works!!

--- a/possel/data/templates/client.html
+++ b/possel/data/templates/client.html
@@ -28,17 +28,7 @@
   <body>
     <div class="container-fluid" id="outer-container">
       <div id="nodeMount" class="row"></div>
-      <!-- <div class="row">
-      <div class="col-md-1"></div>
-      <div class="col-md-11">
-      <form role="form" id="message-input-form">
-      <div class="input-append input-prepend form-inline">
-      <input type="text" class="form-control" id="message-input">
-      <button type="submit" class="btn btn-default">Send</button>
-      </div>
-      </form>
-      </div>
-      </div> -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/>
     </div>
   </body>
 </html>
