--- a/possel/data/templates/client.html
+++ b/possel/data/templates/client.html
@@ -8,17 +8,23 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script>
+      var ws_url = "ws://" + window.location.host + "{{ reverse_url('push') }}";
+    </script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/reconnecting-websocket/1.0.0/reconnecting-websocket.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flux/2.1.1/Flux.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.0.3/js.cookie.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pleasejs/0.2.0/Please.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.3/handlebars.min.js"></script>
+    <script src="http://hamhut1066.com/static/xr.js"></script>
+    <link rel="stylesheet" href="http://getbootstrap.com/dist/css/bootstrap.css">
     <link rel="stylesheet" href="{{ static_url('main.css') }}">
+
     <script>
       var ws_url = "ws://" + window.location.host + "{{ reverse_url('push') }}";
     </script>
@@ -28,7 +34,30 @@
   <body>
     <div class="container-fluid" id="outer-container">
       <div id="nodeMount" class="row"></div>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/>
+    </div>
+    <div id="login-modal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">Login</h4>
+          </div>
+          <form>
+            <div class="modal-body">
+              <label for="login-user">Username</label>
+              <input type="text" class="form-control" id="login-username" autofocus>
+              <label for="login-password">Password</label>
+              <input type="password" class="form-control" id="login-password">
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-primary" data-dismiss="modal" id="login-submit">Login</button>
+            </div>
+          </form>
+        </div>
+
+      </div>
     </div>
   </body>
 </html>
