--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,7 +12,7 @@
     <h5>Channels</h5>
     <h6>imaginarynet.org.uk</h6>
     <ul class="nicklist">
-      <li class="unread"><i class="channel">#</i> compsoc <span class="badge label-light">24</span></li>
+      <li class="unread active"><i class="channel">#</i> compsoc <span class="badge label-light">24</span></li>
       <li class="unread"><i class="channel">#</i> tardis <span class="badge label-light">7</span></li>
       <li><i class="channel">#</i> compsoc-minecraft <span class="badge label-light"></span></li>
       <li><i class="channel">#</i> possel <span class="badge label-light"></span></li>
