More more pretty

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,47 +4,78 @@
     <img src="{{ site.baseurl }}/img/logo.svg" class="logo-sidebar">  
   </header>
 
-  <ul class="nicklist" style="padding: 1em 1em 0em 1em;">
-    <li><i class="status online fa fa-circle"></i> angusp</li>
-  </ul>
-  
-  <section class="channels">
-    <h5>Channels</h5>
-    <h6>imaginarynet.org.uk</h6>
-    <ul class="nicklist">
-      <li class="unread active"><i class="channel">#</i> compsoc <span class="badge label-light">24</span></li>
-      <li class="unread"><i class="channel">#</i> tardis <span class="badge label-light">7</span></li>
-      <li><i class="channel">#</i> compsoc-minecraft <span class="badge label-light"></span></li>
-      <li><i class="channel">#</i> possel <span class="badge label-light"></span></li>
-    </ul>
+  <div class="sidewrap">
 
-    <h6>freenode.net</h6>
-    <ul class="nicklist">
-      <li><i class="channel">#</i> emacs <span class="badge label-light"></span></li>
-      <li><i class="channel">#</i> sparkfun <span class="badge label-light"></span></li>
-      <li><i class="channel">#</i> whatever <span class="badge label-light"></span></li>
-      <li class="unread"><i class="channel">#</i> kerbalspaceprogram <span class="badge label-light">7</span></li>
-      <li><i class="channel">#</i> compsocs-uk <span class="badge label-light"></span></li>
-    </ul>
-  
-  </section>
+    <section>
+      <ul class="nicklist">
+        <li><i class="status online fa fa-circle"></i> angusp</li>
+      </ul>
+    </section>
+    
+    <section class="channels">
+      <h5>Channels</h5>
+      <h6>imaginarynet.org.uk</h6>
+      <ul class="nicklist">
+        <li class="unread active">
+          <i class="channel">#</i> compsoc <span class="badge label-light">24</span>
+          <a class="pull-right part" href=""><i class="fa fa-close"></i></a>
+        </li>
+        <li class="unread">
+          <i class="channel">#</i> tardis <span class="badge label-light">7</span>
+          <a class="pull-right part" href=""><i class="fa fa-close"></i></a>
+        </li>
+        <li>
+          <i class="channel">#</i> compsoc-minecraft <span class="badge label-light"></span>
+          <a class="pull-right part" href=""><i class="fa fa-close"></i></a>
+        </li>
+        <li>
+          <i class="channel">#</i> possel <span class="badge label-light"></span>
+          <a class="pull-right part" href=""><i class="fa fa-close"></i></a>
+        </li>
+      </ul>
 
-  <section class="nicks">
-    <h5>People</h5>
-    <ul class="nicklist">
-      <li><i class="status online fa fa-circle"></i> angusp</li>
-      <li class="unread"><i class="status online fa fa-circle"></i> KitB <span class="badge label-light">1</span></li>
-      <li><i class="status online fa fa-circle"></i> KitC</li>
-      <li><i class="status online fa fa-circle"></i> camerongray</li>
-      <li><i class="status online fa fa-circle"></i> KitD</li>
-      <li><i class="status online fa fa-circle"></i> Norgg</li>
-      <li><i class="status online fa fa-circle"></i> moredhel</li>
+      <h6>freenode.net</h6>
+      <ul class="nicklist">
+        <li>
+          <i class="channel">#</i> emacs <span class="badge label-light"></span>
+          <a class="pull-right part" href=""><i class="fa fa-close"></i></a>
+        </li>
+        <li>
+          <i class="channel">#</i> sparkfun <span class="badge label-light"></span>
+          <a class="pull-right part" href=""><i class="fa fa-close"></i></a>
+        </li>
+        <li>
+          <i class="channel">#</i> whatever <span class="badge label-light"></span>
+          <a class="pull-right part" href=""><i class="fa fa-close"></i></a>
+        </li>
+        <li class="unread">
+          <i class="channel">#</i> kerbalspaceprogram <span class="badge label-light">7</span>
+          <a class="pull-right part" href=""><i class="fa fa-close"></i></a>
+        </li>
+        <li>
+          <i class="channel">#</i> compsocs-uk <span class="badge label-light"></span>
+          <a class="pull-right part" href=""><i class="fa fa-close"></i></a>
+        </li>
+      </ul>
       
-      <li><i class="status away fa fa-circle-o"></i> neanias</li>
-      <li><i class="status away fa fa-circle-o"></i> oliland</li>
-      <li><i class="status away fa fa-circle-o"></i> Jammy</li>
-      <li><i class="status away fa fa-circle-o"></i> Simon</li>
-    </ul>
-  </section>
-  
+    </section>
+
+    <section class="nicks">
+      <h5>People</h5>
+      <ul class="nicklist">
+        <li><i class="status online fa fa-circle"></i> angusp</li>
+        <li class="unread"><i class="status online fa fa-circle"></i> KitB <span class="badge label-light">1</span></li>
+        <li><i class="status online fa fa-circle"></i> KitC</li>
+        <li><i class="status online fa fa-circle"></i> camerongray</li>
+        <li><i class="status online fa fa-circle"></i> KitD</li>
+        <li><i class="status online fa fa-circle"></i> Norgg</li>
+        <li><i class="status online fa fa-circle"></i> moredhel</li>
+        
+        <li><i class="status away fa fa-circle-o"></i> neanias</li>
+        <li><i class="status away fa fa-circle-o"></i> oliland</li>
+        <li><i class="status away fa fa-circle-o"></i> Jammy</li>
+        <li><i class="status away fa fa-circle-o"></i> Simon</li>
+      </ul>
+    </section>
+  </div><!-- /.sidewrap -->
 </div>
