--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -62,6 +62,8 @@
 
     <section class="nicks">
       <h5>People</h5>
+      
+      <h6>imaginarynet.org.uk</h6>
       <ul class="nicklist">
         <li><i class="status online fa fa-circle"></i> angusp</li>
         <li class="unread"><i class="status online fa fa-circle"></i> KitB <span class="badge label-light">1</span></li>
@@ -75,6 +77,16 @@
         <li><i class="status away fa fa-circle-o"></i> oliland</li>
         <li><i class="status away fa fa-circle-o"></i> Jammy</li>
         <li><i class="status away fa fa-circle-o"></i> Simon</li>
+      </ul>
+
+      
+      <h6>freenode.net</h6>
+      <ul class="nicklist">
+        <li><i class="status online fa fa-circle"></i> angusp</li>
+        <li><i class="status online fa fa-circle"></i> KitB </li>
+        <li><i class="status online fa fa-circle"></i> KitC</li>
+        <li><i class="status online fa fa-circle"></i> smoot</li>
+        <li class="unread"><i class="status online fa fa-circle"></i> timbl<span class="badge label-light">14</span></li>
       </ul>
     </section>
   </div><!-- /.sidewrap -->
