--- a/_includes/html-head.html
+++ b/_includes/html-head.html
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script type="text/javascript" src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
 
-    <script>window.twttr = (function(d, s, id) {
+    <!--script>window.twttr = (function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0],
     t = window.twttr || {};
   if (d.getElementById(id)) return t;
@@ -40,5 +40,5 @@
   };
  
   return t;
-}(document, "script", "twitter-wjs"));</script>
+}(document, "script", "twitter-wjs"));</script-->
   </head>
