add libraries and id's to mount onto.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,6 +14,8 @@
     
     <section class="channels">
       <h5>Channels</h5>
+      <div id="chan_list">
+          <!-- begin server -->
       <h6>imaginarynet.org.uk</h6>
       <ul class="nicklist">
         <li class="unread active">
@@ -33,6 +35,7 @@
           <a class="pull-right part" href=""><i class="fa fa-close"></i></a>
         </li>
       </ul>
+      <!-- end server -->
 
       <h6>freenode.net</h6>
       <ul class="nicklist">
@@ -58,6 +61,7 @@
         </li>
       </ul>
       
+      </div>
     </section>
 
     <section class="nicks">
