--- a/_includes/html-head.html
+++ b/_includes/html-head.html
@@ -11,10 +11,10 @@
     <meta name="twitter:widgets:theme" content="light">
     <meta name="twitter:widgets:link-color" content="#1f4a92">
     <meta name="twitter:widgets:border-color" content="#e0e0e0">
-    
+
     <link href="http://fonts.googleapis.com/css?family=Roboto:400,700,400italic,100,200|Roboto+Slab:400,100,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/override.css">
 
     <link rel="icon" type="image/png" href="{{ site.baseurl }}/img/favicon.png">
@@ -22,8 +22,27 @@
     <link rel="shortcut icon" href="{{ site.baseurl }}/img/icon.png">
     <link rel="apple-touch-icon icon" href="{{ site.baseurl }}/img/icon.png">
 
-    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script type="text/javascript" src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
+    <script src="http://cdn.jsdelivr.net/jdenticon/1.3.2/jdenticon.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/sha1.js"></script>
+
+
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/flux/2.1.1/Flux.js"></script>
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react.js"></script>
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react-dom.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/reconnecting-websocket/1.0.0/reconnecting-websocket.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.0.3/js.cookie.min.js"></script>
+
+    <script>
+     var ws_url, protocol;
+     protocol = (location.protocol == 'https:'?'wss://':'ws://')
+         ws_url = protocol + location.host + "{{ reverse_url('push') }}/push";
+    </script>
+
+    <script type="text/javascript" src="{{ site.baseurl }}/js/main.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl }}/js/ui.js"></script>
 
     <!--script>window.twttr = (function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0],
